--- a/public/css/themes/default/_default.scss
+++ b/public/css/themes/default/_default.scss
@@ -93,9 +93,11 @@
 }
 .panel {
   z-index: 2;
-  position: absolute;
+  position: relative;
   border-radius: 20px 20px 0 0;
-  bottom: -20%;
-  left: 0px;
-  width: 100%;
+  margin-top: -35px;
+  margin-bottom: 0;
+  // bottom: -20%;
+  // left: 0px;
+  // width: 100%;
 }
